my-microservice-app/servise.yaml
apiVersion: v1
kind: Service
metadata:
  labels: 
    app: myflask
  name: myflask-svc
spec:
  selector:
    app: myflask
  type: LoadBalancer
  ports:
  - name: flask-svc-port
    port: 80  
    targetPort: http-myflask
