my-microservice-app/servise_.yaml
apiVersion: v1
kind: Service
metadata:
  labels: 
    app: mynginx
  name: mynginx-svc
spec:
  selector:
    app: mynginx
  type: LoadBalancer
  ports:
  - name: nginx-svc-port
    port: 80  
    targetPort: http-mynginx
